feat: ams status, faster printer status retrieval, rework sidebar
